# mom

./: CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
completions/: mom.bash
debian/: changelog  control  copyright  mom-inst.bash-completion  mom-inst.conffiles  mom-inst.lintian-overrides  mom-inst.manpages  mom-inst.postinst  mom-inst.postrm  mom.conf  rules  watch
debian/upstream/: metadata
deny/: deny.apt.list  deny.dnf.list  deny.list
doc/: mom.8
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_deny_list.rs  fuzz_package_name.rs
packaging/logrotate.d/: mom
src/: auth.rs  check.rs  config.rs  deny.rs  detect.rs  exec.rs  log.rs  main.rs
