[package]
name = "mom"
version = "0.2.13"
edition = "2021"
description = "Meta Overlay Manager — allow non-root users to install packages"
license = "MIT"
authors = ["Dirk Petersen"]
repository = "https://github.com/dirkpetersen/mom"
keywords = ["package-manager", "setuid", "apt", "dnf"]
categories = ["command-line-utilities"]

[[bin]]
name = "mom"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
chrono     = { version = "0.4", features = ["serde"] }
globset    = "0.4"
libc       = "0.2"
nix        = { version = "0.29", features = ["fs", "process", "signal", "user"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
syslog     = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip         = true
lto           = true
codegen-units = 1
opt-level     = "z"
panic         = "abort"
