[package]
name = "mom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mom = { path = ".." }

[[bin]]
name = "fuzz_package_name"
path = "fuzz_targets/fuzz_package_name.rs"
doc = false

[[bin]]
name = "fuzz_deny_list"
path = "fuzz_targets/fuzz_deny_list.rs"
doc = false
